--- a/GETube/GETube/Base.lproj/Main.storyboard
+++ b/GETube/GETube/Base.lproj/Main.storyboard
@@ -701,7 +701,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hTq-IR-q6h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-85" y="582"/>
+            <point key="canvasLocation" x="13" y="709"/>
         </scene>
         <!--Setting View Ctr-->
         <scene sceneID="fYa-U5-1Ul">
@@ -851,14 +851,23 @@
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o9D-sr-yza" customClass="YTPlayerView">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="338"/>
-                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                                     </view>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UQO-F2-4U9">
+                                        <rect key="frame" x="545" y="303" width="50" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="f77-Ym-ZIB"/>
+                                            <constraint firstAttribute="width" constant="50" id="wPZ-cD-ZOn"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="BY1-w6-Vt5" secondAttribute="height" multiplier="16:9" id="0E6-lp-Zmv"/>
                                     <constraint firstItem="o9D-sr-yza" firstAttribute="top" secondItem="BY1-w6-Vt5" secondAttribute="top" id="2vW-n0-2r6"/>
                                     <constraint firstAttribute="trailing" secondItem="o9D-sr-yza" secondAttribute="trailing" id="4cj-83-jPM"/>
+                                    <constraint firstAttribute="trailing" secondItem="UQO-F2-4U9" secondAttribute="trailing" constant="5" id="Pp5-h8-4QS"/>
+                                    <constraint firstAttribute="bottom" secondItem="UQO-F2-4U9" secondAttribute="bottom" constant="5" id="QuN-ee-mBy"/>
                                     <constraint firstAttribute="bottom" secondItem="o9D-sr-yza" secondAttribute="bottom" id="a92-La-0OB"/>
                                     <constraint firstItem="o9D-sr-yza" firstAttribute="leading" secondItem="BY1-w6-Vt5" secondAttribute="leading" id="zN5-fM-Ry4"/>
                                 </constraints>
@@ -876,6 +885,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="mBrandLogoView" destination="UQO-F2-4U9" id="UjC-b9-Ket"/>
                         <outlet property="mLoadingIconView" destination="7fV-mQ-I1H" id="Ulc-G2-bKB"/>
                         <outlet property="mPlayerBaseView" destination="BY1-w6-Vt5" id="dy9-op-ykz"/>
                         <outlet property="mPlayerView" destination="o9D-sr-yza" id="24s-7i-qpj"/>
